# turbo_crc

./: CHANGELOG.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  suggestion.md
.github/workflows/: codspeed.yaml  release.yaml  tests.yaml
turbo_crc/: Cargo.toml  build.rs
turbo_crc/benches/: bench.rs
turbo_crc/examples/: example.rs
turbo_crc/src/: lib.rs
